deployment/k8s-componentes-entrega-3.yaml
###################################
# user-management
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  labels:
    app: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: us-central1-docker.pkg.dev/software-nube-miso/dev-nativa-24-container/user_management:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3005
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: service-user-management
  annotations:
    cloud.google.com/backend-config: '{"default": "user-management-config"}'
spec:
  type: NodePort
  selector:
    app: user-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
      nodePort: 31305

---
# ###################################
# # credit-card
# ###################################
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: credit-cards
#   labels:
#     app: credit-cards
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: credit-cards
#   template:
#     metadata:
#       labels:
#         app: credit-cards
#     spec:
#       containers:
#         - name: credit-cards
#           image: us-central1-docker.pkg.dev/software-nube-miso/dev-nativa-24-container/credit_card:1.0
#           resources:
#             requests:
#               memory: "64Mi"
#               cpu: "250m"
#             limits:
#               memory: "128Mi"
#               cpu: "500m"
#           env:
#             - name: "DATABASE_URL"
#               valueFrom:
#                 secretKeyRef:
#                   name: appsecrets 
#                   key: uri
#             - name: USERS_PATH
#               value: http://service-user-management
#             - name: NATIVE_PATH
#               value: http://servicio-native-management
#             - name: MAIL_PATH
#               value: https://us-central1-software-nube-miso.cloudfunctions.net/funcion-enviar-mail
#           ports:
#             - containerPort: 5000
#           # Realizar pull siempre a la imagen
#           imagePullPolicy: Always

# ---
# apiVersion: cloud.google.com/v1
# kind: BackendConfig
# metadata:
#   name: credit-cards-config
# spec:
#   healthCheck:
#     checkIntervalSec: 30
#     port: 5000
#     type: HTTP
#     requestPath: /credit-cards/ping
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: service-credit-cards
#   annotations:
#     cloud.google.com/backend-config: '{"default": "credit-cards-config"}'
# spec:
#   type: NodePort
#   selector:
#     app: credit-cards
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 5000
#       nodePort: 31500
