deployment/k8s-ingress-deployment.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-proyecto-final
  labels:
    name: gateway-ingress-proyecto-final
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api/user
        backend:
          service:
            name: service-user-management
            port: 
              number: 80
      # - pathType: Prefix
      #   path: /native
      #   backend:
      #     service:
      #       name: servicio-native-management
      #       port: 
      #         number: 80
              
      # - pathType: Prefix
      #   path: /credit-cards
      #   backend:
      #     service:
      #       name: service-credit-cards
      #       port: 
      #         number: 80
              
      # - pathType: Prefix
      #   path: /posts
      #   backend:
      #     service:
      #       name: service-post-management
      #       port: 
      #         number: 80
      # - pathType: Prefix
      #   path: /offers
      #   backend:
      #     service:
      #       name: service-offer-management
      #       port: 
      #         number: 80
      # - pathType: Prefix
      #   path: /scores
      #   backend:
      #     service:
      #       name: servicio-score-management
      #       port: 
      #         number: 80
      # - pathType: Prefix
      #   path: /rf004
      #   backend:
      #     service:
      #       name: servicio-create-offer
      #       port: 
      #         number: 80
      # - pathType: Prefix
      #   path: /rf003
      #   backend:
      #     service:
      #       name: servicio-create-post
      #       port: 
      #         number: 80
      # - pathType: Prefix
      #   path: /rf005
      #   backend:
      #     service:
      #       name: servicio-filter-post
      #       port: 
      #         number: 80
